# sfxr-rs

./: Cargo.toml
src/: generator.rs  lib.rs
